# Compilers

./: README.md
hw1/: H1.md  H3.md  Makefile  sort.c
pw1/: H2.md
pw2/labLexer/: CMakeLists-3.txt  Makefile
pw2/labLexer/doc/: labLexer-1.md  labLexer-2.md  labLexer-3.md
pw2/labLexer/grammar/: relop.g4  relop.lex
pw2/labLexer/src/: labLexer-1.c  labLexer-2.c  labLexer-3.cpp
pw3/step1/: answer.md  test1.cpp  test2.cpp
pw3/step2/: answer.md  test1.cpp
pw4/FLex_Bison/demo/grammar/: demoParser.yy  demoScanner.ll  test1.sy  test2.sy
pw4/FLex_Bison/doc/: AST.md  answer.md
pw4/FLex_Bison/grammar/: sysyfParser.yy  sysyfScanner.ll
pw4/step1 熟悉/: 实验过程记录.md
pw4/step2 SysYF/: 实验过程记录.md
pw5/doc/: answer.md
pw5/include/: SyntaxTreeChecker.h
pw5/src/: SyntaxTreeChecker.cpp
pw6/: .gitignore  Qsort.cpp  实验记录.md
pw6/Student/task1/demo/: go_upstairs.ll
pw6/Student/task1/ll/: assign_hand.ll  func_hand.ll  if_hand.ll  io_hand.ll  while_hand.ll
pw6/Student/task1/sy/: assign_test.ll  func_test.c  func_test.ll  if_tesy.c  if_tesy.ll  io.c  io.ll  while_test.c  while_test.ll
pw6/Student/task2/cpp/: assign_gen.cpp  func_gen.cpp  if_gen.cpp  io_gen.cpp  qsort_gen.cpp  while_gen.cpp
pw6/Student/task3/: CMakeLists.txt  main.cpp  myquick.c
pw6/report/: report.md
pw7/: active_100.txt  实验记录.md
pw7/SysYF_Pass_Student/doc/: opt.md  report.md
pw7/SysYF_Pass_Student/src/: main.cpp
pw7/SysYF_Pass_Student/src/Optimize/: ActiveVar.cpp  CMakeLists.txt  CSEglo.cpp  CSEin.cpp  Check.cpp  CodeExtraction.cpp  StrengthReduction.cpp  constPro.cpp  tailCall.cpp
(+28 files in other folders)
