add_library(
        SysYFPass STATIC
        Pass.cpp
        DominateTree.cpp
        RDominateTree.cpp
        Mem2Reg.cpp
        ActiveVar.cpp
        Check.cpp
        tailCall.cpp
        StrengthReduction.cpp
        constPro.cpp
        CodeExtraction.cpp
        CSEin.cpp
        CSEglo.cpp
)
